10 December 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/components/views/annotation/annotation.component.html:
 * clarin-angular/src/app/components/views/annotation/annotation.component.ts:
 Added the ability to toggle the visibility of links.

08 December 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/views/annotation/annotation.component.ts:
 Fix for the empty settings when a Document is loaded from the Annotations
 store.

 * clarin-angular/src/app/ng-matero/core/interceptors/index.ts: Removed the
 error interceptor.

 * backend-django/drag_and_drop/views.py: Fixed a bug when transfering
 attributes whose value is annotation ids.

 * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.ts:
 Added support for drag and drop, by calling the back-end services.

 * clarin-angular/src/app/components/views/main/main.component.ts:
 * clarin-angular/src/app/services/drag-and-drop-service/*: Front-end support
 for drag and drop back-end.

 * clarin-angular/src/proxy.conf.json:
 * backend-django/DjangoClarin/settings.py:
 * backend-django/DjangoClarin/urls.py:
 * backend-django/clarin_backend/sql_views.py:
 * backend-django/clarin_backend/utils.py:
 * backend-django/clarin_backend/views.py:
 * backend-django/drag_and_drop/*: Added back-end for drag and drop.

07 December 2021 Petasis George <petasis@iit.demokritos.gr>, Alexandros Ntogramatzis <antogramatzis@iit.demokritos.gr>:
 * clarin-angular/src/app/app.module.ts:
 * clarin-angular/src/app/components/controls/annotation-set-inspector/annotation-set-inspector.component.html:
 * clarin-angular/src/app/components/controls/annotation-set-inspector/annotation-set-inspector.component.ts:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/components/controls/annotation-detail/*: