@@ -1,3 +1,12 @@
+11 December 2021 Petasis George <petasis@iit.demokritos.gr>:
+ * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
+ * clarin-angular/src/app/components/controls/toolbar-widget/toolbar-widget.component.ts:
+ * clarin-angular/src/app/services/text-widget/text-widget.service.ts: Added a
+ new method for asking if an annotation can be deleted or not.
+
+ * clarin-angular/src/app/components/views/main/main.component.ts: Added the
+ ToastrService service.
+
 10 December 2021 Petasis George <petasis@iit.demokritos.gr>:
  * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
  * clarin-angular/src/app/components/views/annotation/annotation.component.html:
